--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Personal portfolio and résumé of Your Name - Frontend Engineer" />
-        <meta name="author" content="Your Name" />
+        <meta name="author" content="Ayush Bhandari" />
         <!-- <meta name="theme-color" content="#0d6efd" /> -->
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-        <title>Your Name | Portfolio</title>
+        <title>Ayush Bhandari | Resume</title>
     </head>
     <body>
         <div id="root"></div>
