code cleanup, images addition and updated readme

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="Ayush Bhandari" />
-        <!-- <meta name="theme-color" content="#0d6efd" /> -->
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-        <title>Ayush Bhandari | Resume</title>
+        <title>Ayush Bhandari | Web Developer</title>
     </head>
     <body>
         <div id="root"></div>
